2.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: jeon
spec:
  replicas: 1
  # 아래의 label은 replicaset이 관리해야 할 파드를 결정하는데 사용
  selector:
    matchLabels:
      app: ordersystem-service
  template:
    metadata:
    # ‼️⭐아래의 labels는 service의 selector.app과 일치해야 함⭐‼️
      labels:
        app: ordersystem-service
    spec:
      containers:
        - name: my-ordersystem
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/jeon/ordersystem:latest
          ports:
          # yml의 server.port와 일치해야 함
          - containerPort: 8080
          readinessProbe:
            httpGet:
              # healthcheck 경로
              path: /health
              port: 8080
            # 컨테이너 시작 후 지연
            initialDelaySeconds: 10
            # 확인 반복 주기
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ordersystem-service
  namespace: jeon
spec:
  type: ClusterIP
  selector:
    app: ordersystem-service
  ports:
    - port: 80
      targetPort: 8080
